--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,18 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+pkg/
+
+# Berkshelf
+.vagrant
+Berksfile.lock
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
